# fleet-v3

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/bot/: Cargo.toml
crates/bot-root/: Cargo.toml
crates/bot-root-client/: Cargo.toml
crates/bot-root-client/examples/: send_request.rs
crates/bot-root-client/src/: lib.rs
crates/bot-root/src/: complexity_router.rs  floor_control.rs  lib.rs  main.rs  model_registry.rs  ollama_backend.rs  orchestrator.rs  protocol.rs  server.rs  slot_manager.rs
crates/bot/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  ids.rs  lib.rs  secrets.rs
crates/ollama/: Cargo.toml
crates/ollama/src/: client.rs  config.rs  error.rs  lib.rs
crates/personas/: Cargo.toml
crates/personas/src/: lib.rs  prompt_builder.rs  router.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sanitize/: Cargo.toml
crates/sanitize/src/: lib.rs
