[package]
name = "bot-root-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Client IPC leger pour parler au daemon bot-root depuis un bot (socket Unix)."

[dependencies]
fleet-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
serde_json.workspace = true
thiserror.workspace = true
