[package]
name = "bot-root"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Daemon gardien du GPU de la flotte srv-bot v3 : slot-manager, floor-control, routage modeles."

[dependencies]
fleet-core = { path = "../core" }
fleet-protocol = { path = "../protocol" }
fleet-ollama = { path = "../ollama" }
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros", "net", "io-util", "signal"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde_json.workspace = true
