[package]
name = "fleet-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pipeline d'inference commun aux bots : personas + datetime -> bot-root -> sanitize -> repli."

[dependencies]
fleet-protocol = { path = "../protocol" }
fleet-personas = { path = "../personas" }
fleet-sanitize = { path = "../sanitize" }
bot-root-client = { path = "../bot-root-client" }

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
serde_json.workspace = true
