[package]
name = "fleet-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Socle partage de la flotte srv-bot v3 : erreurs typees, secrets *_FILE, identifiants Discord valides."

[dependencies]
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
