[package]
name = "fleet-personas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Mecanisme partage de routage de personas (generalise depuis le module personas/ de Wall-AI)."

[dependencies]
# Aucune dependance externe : le mecanisme est pur. Le contenu (registre de
# personas) est fourni par chaque bot.
