[package]
name = "fleet-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Types de fil partages entre bot-root (daemon) et les bots (clients). Pur serde, sans tokio."

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
