[package]
name = "fleet-sanitize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sanitization des sorties LLM : strip <think>, anti-echo persona, anti-impersonation, prefixes parasites."

[dependencies]
# Pur std, aucune dependance externe.
